--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
   "rules": {
     "semi": "off",
     "arrow-parens": "off",
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "require-jsdoc": "off"
   },
   "extends": [
     "eslint:recommended", "google"
