--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "parser": "babel-eslint",
   "env": {
-          "es6": true,
+    "es6": true,
     "browser": true,
     "node": true
   },
@@ -9,7 +9,8 @@
     "semi": "off",
     "arrow-parens": "off",
     "comma-dangle": "off",
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "operator-linebreak": "off"
   },
   "extends": [
     "eslint:recommended", "google"
