create unit testing

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "env": {
     "es6": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "rules": {
     "semi": "off",
@@ -12,6 +13,7 @@
     "require-jsdoc": "off",
     "operator-linebreak": "off"
   },
+  "plugins": ["jest"],
   "extends": [
     "eslint:recommended", "google"
   ]
