--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "npx eslint ./src"
   },
   "repository": {
@@ -29,6 +30,7 @@
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
+    "@types/jest": "^26.0.20",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -39,6 +41,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3",
@@ -48,6 +51,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "eslint-plugin-jest": "^24.1.3",
     "normalize.css": "^8.0.1"
   }
 }
